--- a/svg/symbols.html
+++ b/svg/symbols.html
@@ -596,6 +596,10 @@
 			<path d="M72.786 38.178h-18.92c-6.014 0-10.908 4.885-10.908 10.89 0 .614-.234 1.185-.66 1.61-.835.837-2.333.873-3.22-.018a2.196 2.196 0 0 1-.661-1.591v-10.58c.992.316 2.035.482 3.082.482 5.558 0 10.079-4.521 10.079-10.078 0-1.02-.827-1.846-1.846-1.846h-11.5c-2.117 0-4.146.648-5.87 1.874a1.748 1.748 0 0 0-.194.16 9.94 9.94 0 0 0-.992.858c-.971-1.654-2.741-2.889-5.127-2.889h-8.635c-1.02 0-1.846.826-1.846 1.846 0 5.556 4.52 10.077 10.075 10.077h2.503v.535h.008v12.034c0 8.864 6.473 16.463 15.021 18.005v2.84c0 1.02.827 1.846 1.846 1.846 3.444 0 6.486-1.738 8.305-4.38h2.996c10.097 0 18.311-8.215 18.311-18.311V40.024c0-1.02-.828-1.846-1.847-1.846zM25.643 35.28c-2.879 0-5.319-1.916-6.112-4.539h6.518c1.806 0 2.284 1.485 2.284 2.27v2.242l-.006.027h-2.684zm25.762 28.877a6.394 6.394 0 0 1-4.539 6.111v-6.33c0-1.807 1.484-2.285 2.27-2.285h2.269v2.504zm4.916 2.003h-1.425c.13-.648.2-1.317.2-2.003v-4.35c0-1.02-.826-1.845-1.845-1.845h-4.115c-2.93 0-5.961 2.235-5.961 5.975v1.844c-6.493-1.49-11.33-7.391-11.33-14.24V37.125a6.38 6.38 0 0 1 2.661-5.18c.055-.04.107-.082.157-.127a6.397 6.397 0 0 1 3.569-1.08h9.382a6.398 6.398 0 0 1-6.115 4.541 6.45 6.45 0 0 1-3.827-1.26 1.846 1.846 0 1 0-2.947 1.482V49.07c0 1.617.631 3.122 1.759 4.22 2.236 2.239 6.209 2.219 8.424.002a5.926 5.926 0 0 0 1.741-4.222c0-3.97 3.238-7.2 7.218-7.2H70.94v3.336h-8.028c-.783 0-1.48.493-1.74 1.23l-4.076 11.528h3.915l3.206-9.067h6.722v2.646c0 8.061-6.557 14.619-14.618 14.619z"></path><path d="M54.37 49.93H52.13a.527.527 0 0 0-.526.526v2.238c0 .291.235.527.526.527h2.239c.29 0 .526-.236.526-.527v-2.238a.527.527 0 0 0-.526-.527zM68.172 23.402c-.992 0-1.928.231-2.769.632v-2.407a6.468 6.468 0 0 0-6.46-6.46 6.468 6.468 0 0 0-6.46 6.46v.923h3.691v-.923a2.772 2.772 0 0 1 2.769-2.769 2.772 2.772 0 0 1 2.769 2.769v12.85h3.691v-4.615a2.772 2.772 0 0 1 2.769-2.768 2.772 2.772 0 0 1 2.769 2.768v2.769h3.691v-2.769a6.468 6.468 0 0 0-6.46-6.46z"></path>
 		</symbol>
 	
+		<symbol id="close" viewBox="0 0 21 21">
+			<path d="M12.028 10.503l8.631-8.584a1.039 1.039 0 0 0 0-1.48 1.064 1.064 0 0 0-1.496 0L10.54 9.013 1.837.31A1.056 1.056 0 0 0 .34.31a1.063 1.063 0 0 0 0 1.5l8.697 8.698-8.728 8.68a1.04 1.04 0 0 0 0 1.481c.412.41 1.083.41 1.495 0l8.721-8.672 8.669 8.67a1.057 1.057 0 0 0 1.495 0 1.063 1.063 0 0 0 0-1.5l-8.662-8.664z" fill="#B4B4B4"></path>
+		</symbol>
+	
 		<symbol id="fb-big" viewBox="0 0 18 30">
 			<path d="M16.499.006L12.609 0C8.237 0 5.412 2.898 5.412 7.383v3.404H1.502a.612.612 0 0 0-.612.612v4.932c0 .338.274.612.612.612h3.911v12.445c0 .338.274.612.612.612h5.104a.612.612 0 0 0 .611-.612V16.943h4.574a.611.611 0 0 0 .611-.612l.002-4.932a.613.613 0 0 0-.612-.612H11.74V7.901c0-1.387.33-2.09 2.137-2.09l2.621-.002a.612.612 0 0 0 .611-.611V.618a.612.612 0 0 0-.61-.612z"></path>
 		</symbol>
@@ -639,7 +643,7 @@
 </svg>
 
 <header>
-    <h1 id="logo">Gulp SVG Sprites <small>(120 icons in &lt;symbol&gt; mode)</small></h1>
+    <h1 id="logo">Gulp SVG Sprites <small>(121 icons in &lt;symbol&gt; mode)</small></h1>
     <h4>Files Generated:</h4>
     <ol>
         <li><a href="svg/symbols.svg">svg/symbols.svg</a></li>
@@ -2524,6 +2528,23 @@
             <button onclick="invertBackground('icon-box-c-99')">Invert Background</button>
             <div class="snippet-popover" id="snippet-c-99">
                 <pre><code>&lt;svg class=&quot;icon c-99&quot;&gt;&lt;use xlink:href=&quot;#c-99&quot;&gt;&lt;/use&gt;&lt;/svg&gt;</code></pre>
+                <button onclick="hidePopover()">Close</button>
+            </div>
+        </li>
+        
+
+        <li title="close">
+            <div class="icon-box" id="icon-box-close">
+                <svg class="icon close">
+                    <use xlink:href="#close" />
+                </svg>
+            </div>
+            <h2>close</h2>
+            <button onclick="showPopover('snippet-close')">Show Snippet</button>
+            <br/>
+            <button onclick="invertBackground('icon-box-close')">Invert Background</button>
+            <div class="snippet-popover" id="snippet-close">
+                <pre><code>&lt;svg class=&quot;icon close&quot;&gt;&lt;use xlink:href=&quot;#close&quot;&gt;&lt;/use&gt;&lt;/svg&gt;</code></pre>
                 <button onclick="hidePopover()">Close</button>
             </div>
         </li>
